--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
               Empresa surpreende o mundo ao anunciar um algoritmo capaz de prever eventos futuros com alta precisão.
             </h3>
             <p class="text-sm">
-              Em um avanço surpreendente da inteligência artificial, uma empresa anuncia o desenvolvimento de um algoritmo capaz de prever eventos futuros com notável precisão. Descubra como essa tecnologia está desafiando as fronteiras da previsão e quais são as implicações para diversas áreas, desde finanças até plan...
+              Em um avanço surpreendente da inteligência artificial, uma empresa anuncia o desenvolvimento de um algoritmo capaz de prever eventos futuros com notável precisão. Descubra como essa tecnologia está desafiando as fronteiras da previsão e quais são as implicações para diversas áreas, desde finanças até pla...
             </p>
           </div>
 
@@ -189,7 +189,7 @@
           <div>
             <span class="content-tag">Inteligência Artificial</span>
             <h3 class="text-xl">
-              Criados para auxiliar idosos, robôs de companhia ganham popularidade, oferecendo suporte emocional e físico aos usuários.
+              Criados para auxiliar idosos, robôs de companhia ganham popularidade, oferecendo suporte emocional e físico aos usu...
             </h3>
             <p class="text-sm">
               A tecnologia não só avança, mas também busca tornar a vida mais significativa para todas as gerações. No cenário atual, os robôs sociais, projetados especialmente para oferecer apoio e companhia aos idosos, estão ganhando destaque. Mais do que meros assistentes, esses robôs são programados para f...
@@ -219,7 +219,7 @@
       </div>
     </section>
 
-    <div>
+    <aside>
       <div id="ads">
         <img src="assets/Ads.png" alt="">
       </div>
@@ -242,7 +242,7 @@
             <div>
               <span class="content-tag">software</span>
               <h3 class="text-xl">
-                Aplicativo de monitoramento ambiental ganha destaque, incentivando práticas ecológicas e pro...
+                Aplicativo de monitoramento ambiental ganha destaque, incentivando práticas ecológic...
               </h3>
             </div>
           </article>
@@ -255,7 +255,7 @@
             <div>
               <span class="content-tag">realidade virtual</span>
               <h3 class="text-xl">
-                Óculos de realidade virtual com feedback tátil proporcionam uma experiência sensorial complet...
+                Óculos de realidade virtual com feedback tátil proporcionam uma experiência sensorial comp...
               </h3>
             </div>
           </article>
@@ -268,7 +268,7 @@
             <div>
               <span class="content-tag">criptomoedas</span>
               <h3 class="text-xl">
-                Surge uma nova moeda digital baseada em tecnologias sustentáveis, buscando minimizar o i...
+                Surge uma nova moeda digital baseada em tecnologias sustentáveis, buscando minimizar...
               </h3>
             </div>
           </article>
@@ -281,7 +281,7 @@
             <div>
               <span class="content-tag">drones</span>
               <h3 class="text-xl">
-                Empresas de e-commerce implementam frota de drones para entregas rápidas, transformando o ce...
+                Empresas de e-commerce implementam frota de drones para entregas rápidas, transformando...
               </h3>
             </div>
           </article>
@@ -294,13 +294,13 @@
             <div>
               <span class="content-tag">impressão 3d</span>
               <h3 class="text-xl">
-                Tecnologia inovadora permite a impressão 3D de órgãos humanos, revolucionando a medicina e a li...
+                Tecnologia inovadora permite a impressão 3D de órgãos humanos, revolucionando a medicina e a...
               </h3>
             </div>
           </article>
         </div>
       </section>
-     </div>
+    </aside>
   </main>
 </body>
 </html>
